# RM-Robot-Rust

./: .gitignore  AI_HANDOFF.md  Cargo.toml  Makefile  README.md  build.rs  memory.x  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BASELINE_STATUS.md  HARDWARE_AND_TUNING.md  SAFETY_HARDENING_DESIGN.md  SAFETY_HARDENING_PLAN.md  VISION_LINK.md
sbc/orange_pi_vision/: Cargo.toml  README.md  build.rs  vision_sender.env.example
sbc/orange_pi_vision/scripts/: run_camera_sender.sh
sbc/orange_pi_vision/src/: lib.rs  vision_link.rs
sbc/orange_pi_vision/systemd/: rm-vision-sender.service
src/: config.rs  lib.rs  main.rs
src/app/: robot.rs
src/chassis/: controller.rs  kinematics.rs  mod.rs
src/config/: can.rs  chassis.rs  gimbal.rs  mod.rs  remote.rs  system.rs
src/control/: chassis.rs  gimbal.rs  mod.rs  pid.rs
src/domain/: can_protocol.rs  command.rs  mod.rs  motor.rs  remote.rs  vision.rs
src/estimation/: attitude.rs  mod.rs  odometry.rs
src/gimbal/: controller.rs  mod.rs
src/platform/: can.rs  mod.rs  sbus.rs  watchdog.rs
